--- a/templates/post.html
+++ b/templates/post.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Blog sobre python</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
-</head>
-<body>
+{% include "header.html" %}
+
 <div class="wrapper">
     <div class="top">
         <div class="title"><h1>Blog de informações sobre python</h1></div>
@@ -23,8 +17,4 @@
     </div>
 </div>
 
-</body>
-<footer>
-    <p>Iago Teles | {{ currentYear }}</p>
-</footer>
-</html>
+{% include "footer.html" %}
