--- a/templates/about.html
+++ b/templates/about.html
@@ -1,18 +1,19 @@
 {% include "header.html" %}
 
-<!-- Page Header-->
-
-<main class="mb-4">
+<main class="about-content mb-4">
   <div class="container px-4 px-lg-5 about-container">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <p>
-          Este é um projeto de um blog simples desenvolvido em Flask, que exibe posts sobre Python. O blog lê dados de um arquivo JSON e renderiza as informações em páginas HTML. O objetivo desse blog é treinar rotas com python no backend, assim como utilizar jinja, bootstrap e js.
+          Este é um projeto de um blog simples desenvolvido em Flask, que exibe
+          posts sobre Python. O blog lê dados de um arquivo JSON e renderiza as
+          informações em páginas HTML. O objetivo desse blog é treinar rotas com
+          python no backend, assim como utilizar jinja, bootstrap e js.
         </p>
         <p>
-          Se você se interessou por este projeto, visite <a href="https://iagoteles-portfolio.vercel.app/">meu portifólio</a>.
+          Se você se interessou por este projeto, visite
+          <a href="https://iagoteles-portfolio.vercel.app/">meu portifólio</a>.
         </p>
-        
       </div>
     </div>
   </div>
