--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,25 +1,7 @@
-<footer class="border-top">
-    <div class="container px-4 px-lg-5">
+<footer>
+    <div class="container py-1">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <ul class="list-inline text-center icons-container">
-                    <li class="list-inline-item">
-                        <a href="https://github.com/iagooteles" target="_blank">
-                            <span class="fa-stack fa-lg">
-                                <i class="fas fa-circle fa-stack-2x" style="color: #1f7f15;"></i>
-                                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://linkedin.com/in/iagooteles" target="_blank">
-                            <span class="fa-stack fa-lg">
-                                <i class="fas fa-circle fa-stack-2x" style="color: #1f7f15;"></i>
-                                <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>
-                </ul>
                 <p>Iago Teles | {{ currentYear }}</p>
             </div>
         </div>
